# godot-mcp-enhanced

./: .gitignore  AI_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SETUP_STATUS.md  TESTING.md  test_godot_connection.py
addons/godot_mcp_enhanced/: file_operations.gd  http_server.gd  plugin.cfg  plugin.gd  runtime_operations.gd  scene_operations.gd  screenshot_manager.gd  script_operations.gd
addons/godot_mcp_enhanced/ui/: bottom_panel.gd  bottom_panel.tscn
docs/: CLI_SETUP.md  EXAMPLES.md  KIRO_SETUP.md  RUNTIME_FEATURES.md  SVG_GUIDE.md  WINDSURF_SETUP.md
python/: README.md  mcp_server.py  pyproject.toml  test_connection.py
studio/: Unsloth_Studio_Colab.ipynb
